Command buffer should not report depth_texture on pure ES3 without depth_texture extension.

BUG=649200
TEST=gpu bots
R=kbr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2363773007
Cr-Commit-Position: refs/heads/master@{#420803}

Former-commit-id: a4589e6cdc603a7d597339c964f78e6f2b4f4c66